--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.21.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
     "next": "14.2.4",
